<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Travel helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_travelhelper">Welcome to Travel Helper!</string>
    <string name="to_continue_authorize">To continue authorize</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="come_up_with_a_password">Come up with a password</string>
    <string name="sign_in">Sign In</string>
    <string name="first_time_with_us">First time with us?</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="already_registered">Already registered?</string>
    <string name="exit_from_the_account">Exit from the account</string>
    <string name="switch_language_to_russsian">Switch language to Russsian?</string>
    <string name="add_new_travel">Add new travel</string>
    <string name="language_switch">Switch</string>
    <string name="my_account">My Account</string>
    <string name="flight_number">Flight number</string>
    <string name="departing_airport">Departing airport</string>
    <string name="date_of_flight_dd_mm_yyyy">Date of flight: dd-MM-yyyy</string>
    <string name="don_t_know_where_to_view_the_flight_number_and_departure_airport_this_screenshot_will_help_you">Don\'t know where to view the flight number and departure airport? This screenshot will help you</string>
    <string name="my_travels">My travels</string>
    <string name="upcoming_travels">Upcoming travels</string>
    <string name="planned_travels">Planned travels</string>
    <string name="completed_travels">Completed travels</string>
    <string name="deleted_travels">Deleted travels</string>
    <string name="upcoming_trips">Upcoming trips</string>
    <string name="create_your_account">Create your account</string>
    <string name="enable_dark_mode">Enable dark mode?</string>
    <string name="back">Back</string>
    <string name="closest_trip">Closest Trip</string>
    <string name="trip_number">Trip number:</string>
    <string name="airport">Airport:</string>
    <string name="date">Date:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="trip_details">Trip Details</string>
    <string name="your_trip_is_coming_soon">Your trip is coming soon!</string>
    <string name="menu">Menu</string>
    <string name="deleted_trips">Deleted trips</string>
    <string name="completed_travels_fragment_text">Completed travels</string>
    <string name="add_thing">Add thing</string>
    <string name="add">Add</string>
    <string name="the_list_of_items_is_empty">The list of items is empty</string>
    <string name="should_i_set_an_alarm_5_hours_before_departure">Should I set an alarm 5 hours before departure?</string>
    <string name="set_the_departure_date">Set the departure date</string>

</resources>