<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F7">

    <LinearLayout
        android:id="@+id/backButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackgroundBorderless">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:scaleType="centerInside"
            app:tint="#007AFF" />

        <TextView
            android:id="@+id/closestTrBackBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="#007AFF"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/backButtonContainer">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShapeAppearance.TravelHelper.Medium"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:strokeColor="#D1D1D6"
                    app:strokeWidth="0.5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tripTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Text.TravelHelper.Title.IOS"
                            android:text="@string/closest_trip"
                            android:layout_marginBottom="16dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Text.TravelHelper.Subtitle.IOS"
                                android:text="@string/trip_number"
                                android:textColor="#000000"/>

                            <TextView
                                android:id="@+id/tripNumberClosestTrip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Text.TravelHelper.Subtitle.IOS"
                                android:textColor="#000000"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Text.TravelHelper.Subtitle.IOS"
                                android:text="@string/airport"
                                android:textColor="#000000"/>

                            <TextView
                                android:id="@+id/airportClosestTrip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Text.TravelHelper.Subtitle.IOS"
                                android:textColor="#000000"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Text.TravelHelper.Subtitle.IOS"
                                android:text="@string/date"
                                android:textColor="#000000"/>

                            <TextView
                                android:id="@+id/dateClosestTrip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Text.TravelHelper.Subtitle.IOS"
                                android:textColor="#000000"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <FrameLayout
                    android:id="@+id/closestTripFragmentContainer"
                    android:layout_width="390dp"
                    android:layout_height="519dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="16dp"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:elevation="8dp"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButtonClosestTrip"
                style="@style/Widget.TravelHelper.Button.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>